--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/rahmlad-aramide/"
+    "url": "https://github.com/rahmlad-aramide/WeatherApp"
   },
   "author": "Rahmlad",
   "license": "ISC",
